# SimpleList

./: .gitignore  .travis.yml  CMakeLists.txt  install.bat
cmake/: config.cmake.in
include/cabba/: SimpleList.h
include/cabba/containers/: List.h
test/unit/: CMakeLists.txt
test/unit/src/: UTSimpleList.cpp  main.cpp
